Styling fixes regarding overflow

--- a/frame/docs/index.css
+++ b/frame/docs/index.css
@@ -27,6 +27,11 @@
   overflow: auto;
 }
 
+@media only screen and (min-width: 770px) {
+  .main-content-container {
+    max-width: 80%;
+  }
+}
 /*! bulma.io v0.7.5 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
@@ -9171,6 +9176,7 @@ label.panel-block:hover {
 
 pre code {
   color: #00bdd6;
+  overflow: scroll;
 }
 
 .has-margin {
